--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,18 @@ body{
 	font-family: Verdana;
 	padding: 20px;
 }
+.storlek{
+background-size: 200px;
+width: 250px;
+height: 250px;
+}
+.bild0{
+	background-image: url("../img/stone.png");
+	background-position: center;
+	background-repeat: no-repeat;
+}
+.bild1{
+	background-image: url("../img/apa.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+}
