Lagt till fråga 10 i quiz:et
Lagt till fråga 10 i quiz:et

--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,8 @@ height: 275px;
 	background-position: center;
 	background-repeat: no-repeat;'
 }
+.bild9{
+	background-image: url("../img/binary.jpg");
+	background-position: center;
+	background-repeat: no-repeat;'
+}
